# rinvoice

./: .gitignore
backend/: .env  Cargo.toml  shell.nix
backend/migrations/: 20251031091316_customers.sql
backend/src/: config.rs  main.rs
backend/src/http/: customers.rs  errors.rs  mod.rs
