[package]
name = "headless"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = {version = "0.8.6", features = ["macros"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features= ["macros", "sqlite", "runtime-tokio-native-tls"] }
rusqlite = {version =" 0.32.1"}
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env"] }
dotenv = "0.15.0"
tower = "0.5.2"
